syntax = "proto3";

package runme.parser.v1;

option go_package = "github.com/runmedev/runme/v3/api/gen/proto/go/runme/parser/v1;parserv1";

message DocResult {
  // The unique ID of the file.
  string file_id = 1;
  // The name of the file.
  string file_name = 2;
  // The relevance score of the file.
  double score = 3;

  // Link to display for this file
  string link = 4;
  // TOO(jlewi): Should we include the file contents?
}
